--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <form>
-            <input type="number">
+            <input type="number" placeholder="Introduce a number here...">
             <button id="introduce-btn" type="submit">Introduce</button>
         </form>
         <hr>
